syntax = "proto3";
package hotel;

// Definition du message hotel 
message Room {
  string id = 1;
  int32 number = 2;
  int32 floor = 3;
  string view = 4;
}

// Définition des messages de requête et de réponse

message GetRoomRequest {
  string room_id = 1;
}

message GetRoomResponse {
  Room room = 1;
}

message SearchRoomsRequest {
  string query = 1;
}

message SearchRoomsResponse {
  repeated Room rooms = 1;
}

// Définition du service de rooms

service HotelService {
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponse);
  rpc SearchRooms(SearchRoomsRequest) returns (SearchRoomsResponse);
  // Add other methods if needed
}
